--- a/goldlady/src/main/resources/application-goldLady.yml
+++ b/goldlady/src/main/resources/application-goldLady.yml
@@ -3,9 +3,9 @@ server:
 #server.port=8082
 spring:
   datasource:
-    url: jdbc:mysql://139.199.19.74:3306/goldlady?characterEncoding=utf8&useSSL=true
-    username: root
-    password: fenxiaodb
+    url: jdbc:mysql://xxx:3306/xxx?characterEncoding=utf8&useSSL=true
+    username: xxx
+    password: xxx
     driver-class-name: com.mysql.jdbc.Driver
   mvc:
     static-path-pattern: /**
@@ -15,8 +15,8 @@ msg:
   ifopen: true
   label: 【金夫人】
   jg:
-    appkey: e11742f0cc47bc6e5fd37089
-    secret: ad48d988dfb9605417a5fb40
+    appkey: xxx
+    secret: xxx
     smgcodeid: 1
 weixin:
   item: goldlady
