--- a/goldlady/src/main/resources/application-syy.yml
+++ b/goldlady/src/main/resources/application-syy.yml
@@ -2,9 +2,9 @@ server:
   port: 8000
 spring:
   datasource:
-    url: jdbc:mysql://111.231.83.249:3306/syy?characterEncoding=utf8&useSSL=true
-    username: root
-    password: minishop1234
+    url: jdbc:mysql://xxx:3306/xxx?characterEncoding=utf8&useSSL=true
+    username: xxx
+    password: xxx
     driver-class-name: com.mysql.jdbc.Driver
   mvc:
     static-path-pattern: /**
@@ -14,8 +14,8 @@ msg:
   ifopen: true
   label: 【水盈玉人】
   jg:
-      appkey: e11742f0cc47bc6e5fd37089
-      secret: ad48d988dfb9605417a5fb40
+      appkey: xxx
+      secret: xxx
       smgcodeid: 1
 weixin:
   item: syy
